# roningine

./: .gitignore  CMakeLists.txt  main.cpp
engine/event/: Event.h  EventQueue.cpp  EventQueue.h
engine/input/: Key.h
platform/sdl/: Adapter.cpp  PlatformSDL.h
src/: main.cpp
src/engine/: Engine.cpp  Engine.h
src/event/: Event.h
src/input/: Input.cpp  Input.h  Key.h
src/platform/sdl/: PlatformSDL.cpp  PlatformSDL.h
